--- a/dbtlearn/dbtlearn/dependencies.yml
+++ b/dbtlearn/dbtlearn/dependencies.yml
@@ -1,3 +1,11 @@
 packages:
   - package: dbt-labs/dbt_utils
     version: 1.3.0
+  - package: dbt-labs/audit_helper
+    version: 0.12.0
+  - package: calogica/dbt_expectations
+    version: [">=0.10.0", "<0.11.0"]
+    # <see https://github.com/calogica/dbt-expectations/releases/latest> for the latest version tag
+  - package: calogica/dbt_date
+    version: [">=0.9.0", "<0.10.0"]
+  - local: C:\Users\pparasyn\source\dbt_packages_local\dbt-data-reliability-master
